--- a/CSS/explore_style.css
+++ b/CSS/explore_style.css
@@ -357,7 +357,7 @@ span {
 
 .ser-title {
   padding: 0.5rem;
-  border-radius: 0.5rem;
+  /* border-radius: 0.5rem; */
   height: 350px;
   /* height: 350px;
   width: 250px;
