--- a/CSS/explore_style.css
+++ b/CSS/explore_style.css
@@ -117,7 +117,7 @@ html::-webkit-scrollbar {
   position: -webkit-sticky;
   top: 0;
   display: flex;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: #000000;
   z-index: 1000;
 }
@@ -145,6 +145,48 @@ html::-webkit-scrollbar {
   flex: 1;
 }
 
+li a .language-option {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  height: 1rem;
+  z-index: 999;
+}
+
+li.dropdown-lng {
+  display: inline-block;
+}
+
+.drop-dwn-lng-btn {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 999;
+  background-color: #ca9b52;
+}
+
+.drop-dwn-lng-btn a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  border: 2px solid black;
+
+}
+
+
+.dropdown-lng:hover .drop-dwn-lng-btn {
+  display: block;
+  z-index: 9999;
+  text-align: top;
+
+}
+
 .nav-right {
   padding-top: 2rem;
 }
@@ -160,7 +202,7 @@ html::-webkit-scrollbar {
   overflow-x: hidden;
 }
 
-.header > a {
+.header>a {
   text-decoration: none;
   padding: 1rem;
   display: inline-block;
@@ -171,7 +213,7 @@ html::-webkit-scrollbar {
   position: relative;
 }
 
-.header > a::after {
+.header>a::after {
   content: "";
   width: 50%;
   height: 2px;
@@ -183,14 +225,14 @@ html::-webkit-scrollbar {
   transition: width 0.3s;
 }
 
-.header > a:hover::after {
+.header>a:hover::after {
   background-color: #ca9b52;
   width: 100%;
 
   color: #ca9b52;
 }
 
-.logo > img {
+.logo>img {
   height: 5rem;
 
   padding-left: 2rem;
@@ -203,7 +245,7 @@ html::-webkit-scrollbar {
   display: inline-block;
 }
 
-.search-icon > .bi {
+.search-icon>.bi {
   color: white;
 }
 
@@ -217,7 +259,7 @@ html::-webkit-scrollbar {
   z-index: 9999;
 }
 
-.topic-header > span {
+.topic-header>span {
   color: #ca9b52;
   opacity: var(#ca9b52);
 }
@@ -239,7 +281,7 @@ html::-webkit-scrollbar {
   transition: 0.4sec;
 }
 
-.topic-header > h1 {
+.topic-header>h1 {
   width: 100%;
   position: absolute;
 
@@ -259,13 +301,63 @@ html::-webkit-scrollbar {
   animation: back 20s linear infinite;
 }
 
+
+/* customers review */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+  color: #333;
+}
+
+.review {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  margin-bottom: 20px;
+  margin-top: 3rem;
+  text-align: center;
+  margin: 1rem;
+}
+
+.review h3 {
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.review p {
+  margin: 0;
+  color: white;
+}
+
+.review .date {
+  color: #888;
+  font-size: 14px;
+}
+
+.review .rating {
+  color: #f39c12;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.review .customer-name {
+  font-weight: bold;
+  margin-bottom: 5px;
+text-decoration: underline;
+}
+
 @keyframes back {
   100% {
     background-position: 2000px 0;
   }
 }
 
-.topic-header > h1 > img {
+.topic-header>h1>img {
   position: absolute;
   width: 6rem;
   height: 6rem;
@@ -274,7 +366,7 @@ html::-webkit-scrollbar {
   bottom: 1rem;
 }
 
-.topic-header > h4 {
+.topic-header>h4 {
   position: absolute;
   width: 100%;
   font-size: 25px;
@@ -299,7 +391,7 @@ html::-webkit-scrollbar {
   transform: translate(-50%, -50%);
 }
 
-.topic-header > img {
+.topic-header>img {
   width: 100%;
   height: 700px;
   object-fit: cover;
@@ -328,7 +420,7 @@ html::-webkit-scrollbar {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.content > p {
+.content>p {
   font-size: 35px;
   color: white;
   font-weight: bold;
@@ -359,6 +451,7 @@ span {
   padding: 0.5rem;
   /* border-radius: 0.5rem; */
   height: 350px;
+  position: relative;
   /* height: 350px;
   width: 250px;
   padding: 25px 25px;
@@ -371,6 +464,7 @@ span {
 .family {
   background-image: url("../images/family_pic.jpg");
   background-repeat: no-repeat;
+
 }
 
 .friends {
@@ -385,20 +479,52 @@ span {
   background-size: cover;
 }
 
-div > h5 {
+div>h5 {
   font-size: 30px;
   margin-bottom: 10px;
 }
 
-i > a {
+i>a {
   color: #fff;
 }
 
+.text {
+  color: black;
+  font-size: 1.2rem;
+  font-style: italic;
+  position: absolute;
+  font-weight: bold;
+  font-family: monospace;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 .discribition {
-  line-height: 27px;
-  font-weight: bolder;
-  font-size: 20px;
-  margin-bottom: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: transparent;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .8s ease-in-out;
+}
+
+.paragraph {
+  text-align: center;
+}
+
+.ser-title:hover .discribition {
+  height: 100%;
+  background-color: rgba(46, 61, 83, 0.7);
+  scroll-snap-type: proximity;
+  scroll-behavior: smooth;
+
 }
 
 .service-items-box::-webkit-scrollbar {
@@ -447,7 +573,11 @@ i > a {
   text-align: center;
 }
 
-.facilities > p {
+.check-price>a {
+  color: #ca9b52;
+}
+
+.facilities>p {
   font-size: 35px;
   color: white;
   font-weight: bold;
@@ -460,13 +590,14 @@ i > a {
   /* background-color: black; */
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 .about-guide {
   flex: 1;
   position: relative;
   color: #ca9b52;
-  height: 600px;
+
   /* width: 250px; */
   padding: 0.5rem 25px;
   border-radius: 25px;
@@ -474,37 +605,63 @@ i > a {
   /* margin: 13px;
   margin-left: 25px; */
   font-size: 25px;
+  overflow: hidden;
 }
 
 .info-guide {
+  position: relative;
   /* 250px */
-  width: inherit;
-  /* 400px */
-  height: inherit;
+  overflow: hidden;
+  border-radius: 25px;
 }
 
-.info-guide > h5 {
+.info-guide>h5 {
   padding-top: 0;
   margin-top: 0;
 }
 
-.info-guide > img {
+.info-guide>img {
   width: 100%;
   height: 250px;
   object-fit: cover;
   object-position: right;
   border-radius: 25px;
+  display: block;
 }
 
 .discribition-guide {
+  width: 100%;
+  height: 100%;
   color: white;
+  position: absolute;
+  bottom: 0;
+  left: 100%;
+  right: 0;
+  overflow: hidden;
+  transition: 1s ease-in-out;
+  background-color: transparent;
+  border-radius: 25px;
 }
 
-.discribition-guide > i {
+.info-guide:hover .discribition-guide {
+  /* width: 100%; */
+  left: 0;
+  /* height: 100%; */
+  /* scroll-snap-type: mandatory; */
+  /* scroll-behavior: smooth; */
+  background-color: rgba(46, 61, 83, 0.7);
+  transition: 1s ease-in-out;
+  overflow: hidden;
+
+
+}
+
+.discribition-guide>i {
   font-size: medium;
+  overflow: hidden;
 }
 
-.bi-link > a {
+.bi-link>a {
   text-decoration: none;
 }
 
@@ -559,14 +716,14 @@ i > a {
   transition: 0.4s;
 }
 
-.extra-services-avaiable > a {
+.extra-services-avaiable>a {
   text-decoration: none;
   font-size: x-large;
   font-size: bold;
   color: #fff;
 }
 
-.extra-services-avaiable > a:hover {
+.extra-services-avaiable>a:hover {
   color: #ca9b52;
   transition: 0.5s;
 }
@@ -576,7 +733,7 @@ i > a {
   padding-top: 2rem;
 }
 
-.paragraph-left-spacing > p {
+.paragraph-left-spacing>p {
   display: inline-block;
   text-indent: 50%;
   color: white;
@@ -586,7 +743,7 @@ i > a {
   word-spacing: 0.2rem;
 }
 
-.paragraph-left-spacing > p::first-letter {
+.paragraph-left-spacing>p::first-letter {
   font-size: 3rem;
   color: #ca9b52;
 }
@@ -605,7 +762,7 @@ i > a {
   padding-top: 5px;
 }
 
-.places > p {
+.places>p {
   color: white;
   font-size: larger;
 }
@@ -660,7 +817,7 @@ i > a {
     background-color: transparent;
 
 } */
-.place1 > a {
+.place1>a {
   font-size: 25px;
   font-weight: bold;
   height: 100%;
@@ -672,7 +829,7 @@ i > a {
   text-decoration: none;
 }
 
-.place1 > a:hover {
+.place1>a:hover {
   color: #ca9b52;
   transition: 0.5s;
 }
@@ -710,13 +867,13 @@ i > a {
   display: flex;
 }
 
-.categories-list > a {
+.categories-list>a {
   text-decoration: none;
   color: white;
   font-weight: bold;
 }
 
-.categories-list > a:hover {
+.categories-list>a:hover {
   color: black;
   transition: 0.5s;
 }
@@ -740,7 +897,7 @@ i > a {
   padding-bottom: 3rem;
 }
 
-.tnk-msg > footer {
+.tnk-msg>footer {
   padding: 1rem 0rem;
 }
 
@@ -763,7 +920,7 @@ i > a {
   color: #ca9b52;
 }
 
-.comment-layout > input,
+.comment-layout>input,
 textarea {
   width: 100%;
   padding: 0.5rem;
@@ -771,7 +928,7 @@ textarea {
   font-size: medium;
 }
 
-.comment-layout > label {
+.comment-layout>label {
   font-size: large;
 }
 
@@ -780,7 +937,7 @@ hr {
   background-color: #7a7979;
 }
 
-.comment-send-button > a > button {
+.comment-send-button>a>button {
   background-color: #ca9b52;
   padding: 0.8rem;
   width: 7rem;
@@ -815,20 +972,24 @@ footer {
   gap: 4rem;
 }
 
-.footer > footer {
+.footer>footer {
   padding: 0rem 6rem;
   font-size: large;
 }
 
-footer > a {
+footer>a {
   font-size: large;
   text-decoration: none;
   color: #ca9b52;
 }
 
-.middle-footer > a {
+.middle-footer>a {
   padding: 0rem 0.8rem;
 }
+
+/* top png image */
+
+
 
 /* back to top botton 
 start */
@@ -929,7 +1090,7 @@ start */
     flex-direction: column-reverse;
   }
 
-  .footer > footer {
+  .footer>footer {
     font-size: small;
   }
 
@@ -991,14 +1152,14 @@ start */
     font-size: 3rem;
   }
 
-  .topic-header h1 > img {
+  .topic-header h1>img {
     height: 5rem;
     width: 5rem;
     display: flex;
     margin-left: 2rem;
   }
 
-  .topic-header > h4 {
+  .topic-header>h4 {
     margin: 0 auto;
     font-size: medium;
   }
@@ -1018,16 +1179,18 @@ start */
     font-size: medium;
   }
 
-  .info-guide > h5 {
+  .info-guide>h5 {
     font-size: large;
   }
-  .ser-title > .paragraph {
+
+  .ser-title>.paragraph {
     font-size: 2rem;
     text-align: center;
     border-bottom: 1.5px solid black;
     text-shadow: 1px 6px 2px #3c3c3c;
   }
-  .ser-title > .discribition {
+
+  .ser-title>.discribition {
     font-size: large;
     text-align: center;
     text-shadow: 1px 1.5px 3px #3c3c3c;
@@ -1064,6 +1227,7 @@ start */
     font-size: small;
     padding: 1rem;
   }
+
   .header {
     display: flex;
     flex-direction: column;
